service.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-service
  namespace: default
spec:
  selector:
    app: example-app
  type: ClusterIP  # if approach from outside, use LoadBalancer
  ports:
    - port: 80
      targetPort: 80
